# EEG-Emo_Rec_Pipeline

./: .gitignore  README.md  development-zh.md  development.md  pyproject.toml  ruff.toml
scripts/: tree_data.py  tree_src.sh
src/: main.py
src/config/: __init__.py  option_utils.py  types.py
src/feature_extractor/: __init__.py  core.py
src/feature_extractor/options/options_channel_pick/: __init__.py
src/feature_extractor/options/options_feature/: __init__.py  option_dasm.py  option_de.py  option_deasm.py  option_psd.py  utils.py
src/feature_extractor/options/options_segmentation/: __init__.py
src/model_trainer/: core.py
src/model_trainer/options/: __init__.py
src/model_trainer/options/options_model/: __init__.py  option_sklearn_baseline.py
src/model_trainer/options/options_training_data/: __init__.py
src/model_trainer/options/options_training_data/options_build_dataset/: __init__.py
src/model_trainer/options/options_training_method/: __init__.py  option_sklearn.py
src/model_trainer/types/: __init__.py  model.py  model_training.py  training.py  training_data.py  training_method.py
src/pipeline_runner/: __init__.py
src/preprocessor/: core.py  utils.py
src/preprocessor/options/preprocessing_options/: __init__.py  option_clean.py  option_ica_clean.py  option_unclean.py  utils.py
src/utils/: __init__.py
